// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render with children 1`] = `
<styled.div
  theme={
    Object {
      "primary": "#fff",
      "secondary": "",
      "tertiary": "",
    }
  }
>
  <styled.span>
    Test Header
  </styled.span>
</styled.div>
`;

exports[`Header should render without children 1`] = `
<styled.div
  theme={
    Object {
      "primary": "#fff",
      "secondary": "",
      "tertiary": "",
    }
  }
>
  <styled.span />
</styled.div>
`;
